[package]
name = "osc_broadcaster"
version = "0.1.0"
description = "OSC(Open Sound Control) broad cast server"
license = "MIT"
readme = "README.md"
edition = "2021"
authors = ["Katsuya Endoh"]
repository = "https://github.com/enkatsu/osc_broadcaster"
homepage = "https://osc-broadcaster.enkatsu.org/"
categories = ["network-programming"]
keywords = ["osc", "audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "~0.10"
clap = { version = "3.2.23", features = [ "derive" ] }
comfy-table = "4.1.1"
csv = "1.2"
